--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@
 
 - title: CP
   url: /cp/
-  excerpt: "the dc bot tutorial"
+  excerpt: "the introdoction of algorithm and data structures in competitive programming"
   image: programing.png
 
 
